[package]
name = "yesno"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.2", features = ["json-using-serde", "https"] }
structopt = "0.3"
main_error = "0.1"

[profile.release]
panic = "abort"
lto = true

