[package]
name = "yesno"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
minreq = { version = "2.10", features = ["json-using-serde", "https-native"] }
clap = { version = "4.0", features = ["derive"] }
main_error = "0.1"

[profile.release]
panic = "abort"
lto = true

[dev-dependencies]
snapbox = "0.4.12"

